# rust_bookmarks

./: .env  Cargo.toml  kv.cfg
src/: main.rs
