[package]
name = "rust-bunny"
version = "0.1.0"
authors = ["sousajo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
serde = "1.0.118"
percent-encoding = "2.1.0"
r2d2 = "0.8"
jfs = "0.6.2"
r2d2-jfs = "0.1.0"
actix-http = "2.2.0"