[package]
name = "untitled"
version = "0.1.0"
authors = ["sousajo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
pickledb = "0.4.1"
serde = "1.0.118"
percent-encoding = "2.1.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
kv = "0.22.0"